--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>A Really Interesting Portfolio</title>
 
     <link rel="stylesheet" href="style.css">
+
+    <!-- box icons -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
 
@@ -15,14 +18,68 @@
     <header class="header">
         <a href="#" class="logo">Lilipod.</a>
 
+        <div class="bx bx-menu" id="menu-icon"></div>
+
         <nav class="navbar">
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
+            <a href="#home" class="active">Home</a>
+            <a href="#about">About</a>
+            <a href="#education">Education</a>
+            <a href="#skills">Skills</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
+
+    <!-- home selection design -->
+
+    <section class="home" id="home">
+        <div class="home-content">
+            <h1>Hello, I'm <span>Eliora Anwansedo</span></h1>
+            <div class="text-animate">
+                <h3>Frontend Developer</h3>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                A atque eum amet ut ad architecto,
+                esse vitae rerum consequatur eaque soluta ab dignissimos, 
+                corporis maiores doloremque harum magni aliquam quam!</p>
+
+                <div class="btn-box">
+                    <a href="#" class="btn">Hire Me</a>
+                    <a href="#" class="btn">Let's Talk</a>
+                </div>
+        </div>
+
+        <div class="home-sci">
+            <a href="https://bit.ly/3XIKRp7"><i class='bx bxs-envelope'></i></a>
+            <a href="https://bit.ly/3D1RSrB"><i class='bx bxl-tiktok'></i></a>
+            <a href="https://bit.ly/44ue5dE"><i class='bx bxl-snapchat'></i></a>
+            <a href="https://bit.ly/3PIVG8L"><i class='bx bxl-pinterest'></i></a>
+            <a href="https://tinyurl.com/wtr45d48"><i class='bx bxl-discord-alt'></i></a>
+        </div>
+
+        <div class="home-imgHover"></div>
+    </section>
+
+    <!-- about section design -->
+    <section class="about" id="about">
+        <h2 class="heading">About <span>Me</span></h2>
+
+        <div class="about-img">
+            <img src="https://bit.ly/44Sth4L" alt="">
+            <span class="circle-spin"></span>
+        </div>
+
+        <div class="about-content">
+            <h3>Frontend Developer!</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque non voluptas porro dolor saepe quas reiciendis tenetur, quis adipisci libero voluptatibus cum officia beatae ex inventore iste fugit! Aliquid, libero.
+            Neque aspernatur fuga molestias? Deleniti, eius? Maiores eveniet temporibus officiis assumenda, unde laboriosam non dolorum culpa odit reprehenderit corporis ad consequatur doloremque. Minima similique repudiandae, ducimus consectetur earum nihil quasi.
+            Laudantium neque provident sunt dicta, debitis minus blanditiis mollitia iusto harum nam tenetur rerum temporibus tempore inventore. Aliquid iure eos saepe in aliquam vel debitis maiores itaque quod ad! Minus.</p>
+
+            <div class="btn-box btns">
+                <a href="" class="btn">Read More</a>
+            </div>
+        </div>
+    </section>
+
 
 
 
