--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
 <body>
 
     <!-- header design -->
-
     <header class="header">
-        <a href="#" class="logo">Lilipod.</a>
+        <a href="#" class="logo">Lilipod.<span class="animate" style="--i:1;"></span></a>
 
-        <div class="bx bx-menu" id="menu-icon"></div>
+        <div class="bx bx-menu" id="menu-icon"><span class="animate" style="--i:2;"></span></div>
 
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
@@ -26,25 +25,31 @@
             <a href="#education">Education</a>
             <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>
+
+            <span class="active-nav"></span>
+            <span class="animate" style="--i:2;"></span>
         </nav>
     </header>
 
     <!-- home selection design -->
-
-    <section class="home" id="home">
+    <section class="home show-animate" id="home">
         <div class="home-content">
-            <h1>Hello, I'm <span>Eliora Anwansedo</span></h1>
+            <h1>Hello, I'm <span>Eliora Anwansedo</span><span class="animate" style="--i:2;"></span></h1>
             <div class="text-animate">
                 <h3>Frontend Developer</h3>
+                <span class="animate" style="--i:3;"></span>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 A atque eum amet ut ad architecto,
                 esse vitae rerum consequatur eaque soluta ab dignissimos, 
-                corporis maiores doloremque harum magni aliquam quam!</p>
+                corporis maiores doloremque harum magni aliquam quam!
+                <span class="animate" style="--i:4;"></span>
+            </p>
 
                 <div class="btn-box">
                     <a href="#" class="btn">Hire Me</a>
                     <a href="#" class="btn">Let's Talk</a>
+                    <span class="animate" style="--i:5;"></span>
                 </div>
         </div>
 
@@ -54,14 +59,16 @@
             <a href="https://bit.ly/44ue5dE"><i class='bx bxl-snapchat'></i></a>
             <a href="https://bit.ly/3PIVG8L"><i class='bx bxl-pinterest'></i></a>
             <a href="https://tinyurl.com/wtr45d48"><i class='bx bxl-discord-alt'></i></a>
+            <span class="animate" style="--i:6;"></span>
         </div>
 
         <div class="home-imgHover"></div>
+        <span class="animate home-img" style="--i:7;"></span>
     </section>
 
     <!-- about section design -->
     <section class="about" id="about">
-        <h2 class="heading">About <span>Me</span></h2>
+        <h2 class="heading">About <span>Me</span><span class="animate scroll" style="--i:1;"></span></h2>
 
         <div class="about-img">
             <img src="https://bit.ly/44Sth4L" alt="">
@@ -84,7 +91,6 @@
 
     <section class="education" id="education">
         <h2 class="heading">My <span>Journey</span></h2>
-
         <div class="education-row">
             <div class="education-column">
                 <h3 class="title">Education</h3>
@@ -121,8 +127,6 @@
                     </div>
                 </div>
             </div>
-            
-
             <div class="education-column">
                 <h3 class="title">Experience</h3>
 
@@ -170,36 +174,121 @@
         </div>
     </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- skills section design -->
 
     <section class="skills" id="skills">
-        <h2 class="heading">My <span>Journey</span></h2>
+        <h2 class="heading">My <span>Skills</span></h2>
+
+        <div class="skills-row">
+            <div class="skills-column">
+                <h3 class="title">Coding Skills</h3>
+
+                <div class="skills-box">
+                    <div class="skills-content">
+                        <div class="progress">
+                            <h3>Html <span>90%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+
+                        <div class="progress">
+                            <h3>CSS <span>80%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+
+                        <div class="progress">
+                            <h3>JavaScript <span>5%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+
+                        <div class="progress">
+                            <h3>Python <span>0%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="skills-column">
+                <h3 class="title">Professional Skills</h3>
+
+                <div class="skills-box">
+                    <div class="skills-content">
+                        <div class="progress">
+                            <h3>Web Design <span>95%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+
+                        <div class="progress">
+                            <h3>Wed Development <span>67%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+
+                        <div class="progress">
+                            <h3>Graphic Design <span>85%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+
+                        <div class="progress">
+                            <h3>SEO Marketing <span>50%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- contact section design -->
 
     <section class="contact" id="contact">
-        <h2 class="heading">My <span>Journey</span></h2>
+        <h2 class="heading">Contact <span>Me!</span></h2>
+
+        <form action="#">
+            <div class="input-box">
+                <div class="input-field">
+                    <input type="text" placeholder="Full Name" required>
+                    <span class="focus"></span>
+                </div>
+                <div class="input-field">
+                    <input type="email" placeholder="Email Address" required>
+                    <span class="focus"></span>
+                </div>
+            </div>    
+
+            <div class="input-box">
+                    <div class="input-field">
+                        <input type="number" placeholder="Mobile Number" required>
+                        <span class="focus"></span>
+                    </div>
+                    <div class="input-field">
+                        <input type="text" placeholder="Email Subject" required>
+                        <span class="focus"></span>
+                    </div>
+            </div>
+
+            <div class="textarea-field">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
+                <span class="focus"></span>
+            </div>
+
+            <div class="btn-box btns">
+                <button type="submit" class="btn">Submit</button>
+            </div>
+        </form>
     </section>
 
 
+    <!-- footer Design -->
+
+    <footer class="footer">
+        <div class="footer-text">
+            <p>Copyright &copy; 2023 by Eliora Anwansedo | All Rights Reserved.</p>
+        </div>
+
+        <div class="footer-iconTop">
+            <a href="#"><i class='bx bxs-up-arrow bx-tada'></i></a>
+        </div>
+    </footer>
 
 
     <script src="script.js"></script>
