i couldnt do the type thing soooooooooooo.....

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                 <span class="animate" style="--i:4;"></span>
             </p>
 
-                <div class="btn-box">
-                    <a href="#" class="btn">Hire Me</a>
-                    <a href="#" class="btn">Let's Talk</a>
-                    <span class="animate" style="--i:5;"></span>
-                </div>
+            <div class="btn-box">
+                <a href="#" class="btn">Hire Me</a>
+                <a href="#" class="btn">Let's Talk</a>
+                <span class="animate" style="--i:5;"></span>
+            </div>
         </div>
 
         <div class="home-sci">
@@ -68,7 +68,7 @@
 
     <!-- about section design -->
     <section class="about" id="about">
-        <h2 class="heading">About <span>Me</span><span class="animate scroll" style="--i:1;"></span></h2>
+        <h2 class="heading">About <span>Me</span></h2>
 
         <div class="about-img">
             <img src="https://bit.ly/44Sth4L" alt="">
@@ -79,10 +79,11 @@
             <h3>Frontend Developer!</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque non voluptas porro dolor saepe quas reiciendis tenetur, quis adipisci libero voluptatibus cum officia beatae ex inventore iste fugit! Aliquid, libero.
             Neque aspernatur fuga molestias? Deleniti, eius? Maiores eveniet temporibus officiis assumenda, unde laboriosam non dolorum culpa odit reprehenderit corporis ad consequatur doloremque. Minima similique repudiandae, ducimus consectetur earum nihil quasi.
-            Laudantium neque provident sunt dicta, debitis minus blanditiis mollitia iusto harum nam tenetur rerum temporibus tempore inventore. Aliquid iure eos saepe in aliquam vel debitis maiores itaque quod ad! Minus.</p>
+            Laudantium neque provident sunt dicta, debitis minus blanditiis mollitia iusto harum nam tenetur rerum temporibus tempore inventore. Aliquid iure eos saepe in aliquam vel debitis maiores itaque quod ad! Minus.
+        </p>
 
             <div class="btn-box btns">
-                <a href="" class="btn">Read More</a>
+                <a href="#" class="btn">Read More</a>
             </div>
         </div>
     </section>
@@ -91,6 +92,7 @@
 
     <section class="education" id="education">
         <h2 class="heading">My <span>Journey</span></h2>
+
         <div class="education-row">
             <div class="education-column">
                 <h3 class="title">Education</h3>
@@ -162,15 +164,6 @@
                     </div>
                 </div>
             </div>
-
-            
-            
-
-
-
-
-
-
         </div>
     </section>
 
@@ -292,5 +285,12 @@
 
 
     <script src="script.js"></script>
+
+
+
+<!-- VIDOE FOR THIS PROJECT -->
+
+<a href="https://www.youtube.com/watch?v=sQoiM7i5Nqc&ab_channel=Codehal">this the video click it    !</a>
+
 </body>
 </html>
